kubernetes/apps/network/internal/remote-services/services/radarr.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-radarr
  namespace: network
spec:
  ports:
    - port: 7878
      protocol: TCP
      targetPort: 7878
      name: http
  type: ExternalName
  externalName: zeus.nas.home.internal
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-radarr
  namespace: network
  annotations:
    error-pages.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "radarr"
    gethomepage.dev/description: "Movie Manager"
    gethomepage.dev/href: "https://apps.${SECRET_DOMAIN}/radarr"
    gethomepage.dev/group: "Media Organization"
    gethomepage.dev/icon: "radarr.png"
    gethomepage.dev/widget.type: "radarr"
    gethomepage.dev/widget.url: http://zeus.nas.home.internal:7878/radarr
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_RADARR_KEY}"
    gethomepage.dev/siteMonitor: http://zeus.nas.home.internal:7878
spec:
  ingressClassName: internal
  rules:
    - host: "apps.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /radarr
          pathType: Prefix
          backend:
            service:
              name: remote-internal-radarr
              port:
                number: 7878
  tls:
    - hosts:
        - "apps.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
